--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
         
         <div class="bio-card">
             <div class="photo">
-                <img src="https://via.placeholder.com/150" alt="Student Photo">
+                <img src="img/whitecat.png" alt="Rebecca Rader">
             </div>
             <div class="bio">
-                <h2>John Doe</h2>
-                <p>Hi, I'm John, a passionate software developer currently enrolled in the Code:You bootcamp. I love building responsive web applications and constantly exploring new technologies.</p>
+                <h2>Rebecca Rader</h2>
+                <p>Hello! I am working on taking my hobbies and turning them into my career, doing work I love for once and not just to get a paycheck. I've been coding for twenty years and doing graphic design for fifteen years. I'm from Maine but I live in Kentucky with my husband, who is from here. I have three dogs and one cat named Puppy.</p>
             </div>
         </div>
 
@@ -28,6 +28,8 @@
             <a href="https://linkedin.com/in/username" target="_blank" class="link-btn">LinkedIn</a>
         </div>
     </div>
-
+    <script>
+        alert("Hello World, I'm a Developer");
+    </script>
 </body>
 </html>
